crates/diskuse/tests/snapshots/sorted_by_size@linux-d0-s0.snap
---
source: tests/browse.rs
---
/fixture  28.0 KiB | +8.0 KiB since opened 0 s ago | scanned 0 s ago
  16.0 KiB             57.1% big/                              8.0 KiB  new
  12.0 KiB    +8.0 KiB 42.9% small/                            4.0 KiB  f















small/ | 12.0 KiB  own 12.0 KiB
hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  10..18  BOLD
 0  18..21  DarkGray
 0  50..53  DarkGray
 1   0..10  Green
 1  10..11  DarkGray
 1  23..28  Green
 1  29..33  BOLD
 1  60..70  Green
 1  70..71  DarkGray
 2   0..59  Indexed(231) on Indexed(25) BOLD
 2  60..70  Green
 2  70..71  DarkGray
18   0..6   BOLD
18   6..9   DarkGray
18   9..17  Green
18  17..23  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
