crates/diskuse/tests/snapshots/stopped_scan_shown_while_scanning@linux-d4096-s0.snap
---
source: tests/browse.rs
---
/stopped  scanning 0 B of ~4.0 KiB (0%) | showing the scan saved 0 s ago, incomplete


















hjkl move  i info  u units  space pick  p picks  r reveal  s/S rescan  / filter  ? help  q quit
--- styles ---
 0  39..42  DarkGray
19   0..4   Cyan BOLD
19  11..12  Cyan BOLD
19  19..20  Cyan BOLD
19  28..33  Cyan BOLD
19  40..41  Cyan BOLD
19  49..50  Cyan BOLD
19  59..62  Cyan BOLD
19  71..72  Cyan BOLD
19  81..82  Cyan BOLD
19  89..90  Cyan BOLD
